# django-datetime-cheatsheet

./: README.md  justfile  pyproject.toml
apps/accounts/: admin.py  middleware.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_timezone.py
apps/accounts/templates/account/: login.html
apps/base/: model_fields.py  views.py
apps/base/templates/layouts/: base.html
apps/base/tests/: test_datetime.py
apps/events/: models.py
apps/events/migrations/: 0001_initial.py
config/: settings.py  urls.py
public/static/: timezone-detector.js
scripts/: run_initial_setup.py  update_readme.py
tests/: __init__.py  test_datetime_basics.py  test_datetime_formatting.py  test_forms.py  test_mocking.py  test_models.py  test_templates.py
