[project]
name = "django-datetime-cheatsheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-allauth>=65.3.0",
    "django~=5.1",
    "environs[django]>=11.2.1",
    "pytest-django>=4.9.0",
    "model-bakery>=1.20.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.10",
    "ruff>=0.9",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
